header slider component

--- a/index.html
+++ b/index.html
@@ -54,11 +54,10 @@
         <div class="slide slide--2">
           <div class="header-title-description">
               <h1 class="description-title">
-                  Super Delicious Pizza <span>In Kandahar</span>
+                 ingredients
               </h1>
               <p>
-                  Food is any substance consumed to provide nutritional 
-                  support for an organism</p>
+                All the ingredients are fresh and carefully selected by our chefs. Enjoy an extraordinary dinning experience.</p>
               <button class="btn--text btn--scroll-to">Learn more  <span> &#8744 </span></button>
           </div>
           <img
@@ -70,11 +69,10 @@
         <div class="slide slide--3">
           <div class="header-title-description">
               <h1 class="description-title">
-                  Super Delicious Pizza <span>In Kandahar</span>
+                  Dining With Us
               </h1>
               <p>
-                  Food is any substance consumed to provide nutritional 
-                  support for an organism</p>
+                For us, it's not just about bringing you good food from your favourite restaurants. It's about making a connection ,Try us!</p>
               <button class="btn--text btn--scroll-to">Learn more  <span> &#8744 </span></button>
           </div>
           <img
