footer & header nav items smooth scollin

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li class="nav-link"><a class="link-addr" href="#home">Home</a></li>
           <li class="nav-link"><a class="link-addr" href="#section--1">About Us</a></li>
           <li class="nav-link"><a class="link-addr" href="#section--2">Shop</a></li>
-          <li class="nav-link"><a class="link-addr" href="#blog">Blog</a></li>
+          <li class="nav-link"><a class="link-addr" href="#section--3">Booking</a></li>
           <li class="nav-link"><a class="link-addr" href="#section--footer">Contact</a></li>
         </ul>
         <ul class="nav-links right-align">
@@ -216,19 +216,19 @@
                   <a class="footer__link" href="#">Reservation</a>
                 </li>
                 <li class="footer__item">
-                  <a class="footer__link" href="#">Bloge</a>
+                  <a class="footer__link" href="#section--3">Booking</a>
                 </li>
                 <li class="footer__item">
-                  <a class="footer__link" href="#">Contact</a>
+                  <a class="footer__link" href="#section--footer">Contact</a>
                 </li>
                 <li class="footer__item">
-                  <a class="footer__link" href="#">Shop</a>
+                  <a class="footer__link" href="#section--2">Shop</a>
                 </li>
                 <li class="footer__item">
                   <a class="footer__link" href="#">Sign in</a>
                 </li>
                 <li class="footer__item">
-                  <a class="footer__link" href="#">About Us</a>
+                  <a class="footer__link" href="#section--1">About Us</a>
                 </li>
               </ul>
               <p
